--- a/src/www/index.html
+++ b/src/www/index.html
@@ -31,6 +31,7 @@
         s.parentNode.insertBefore(wf, s);
       })();
     </script>
+      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqdXeIDnTQ08kO8Sik7zev46Y-iyN7JYc&libraries=places"></script>
     <script src="app.js"></script>
   </body>
 </html>
